# local-llama-cuda

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CUDA_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_SUMMARY.md  FINAL_STATUS.md  GETTING_STARTED.md  GITHUB_PUSH_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  RUNNING_CUDA_BENCHMARKS.md  Software-Engineer-Applied-AI-lm-studio.txt  setup_benchmarks.sh  verify_cuda.sh
apps/: llcuda.cpp  llcuda_client.cpp  llcuda_mpi.cu  llcuda_server.cpp
benchmarks/: latency_bench.cu  scaling_bench.cpp  throughput_bench.cu
docs/: PROJECT_OVERVIEW.md
examples/: basic_inference.cpp  batch_processing.cpp
logs/: BENCHMARK_RESULTS_SUMMARY.md  TEST_RESULTS_ANALYSIS.md  linux-termial-logs.txt  llama.cpp-logs.txt
scripts/: build.sh  env_check.sh  quick_test.sh
src/core/: http_client.cpp  inference_engine.cpp  metrics_collector.cpp  model_manager.cpp  request_processor.cpp  sha256.cpp
src/cuda/: cuda_backend.cu  custom_kernels.cu  memory_manager.cu  stream_manager.cu
src/mpi/: collective_ops.cpp  device_mapper.cpp  mpi_coordinator.cpp  work_scheduler.cpp
src/storage/: cache_manager.cpp  content_addressed_store.cpp  manifest_manager.cpp  sha256.cpp  storage_client.cpp
src/tcp/: connection_pool.cpp  protocol_handler.cpp  streaming_handler.cpp  tcp_server.cpp
